force-app/main/default/objects/EmailCampaignReceival__c/EmailCampaignReceival__c.object-meta.xml
<CustomObject>
    <label>Email Campaign Snapshot</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Campaign Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>