force-app/main/default/objects/EmailCampaignReceival__c/fields/BouncedAt__c.field-meta.xml
<CustomField>
    <fullName>BouncedAt__c</fullName>
    <label>Bounced At</label>
    <type>DateTime</type>
</CustomField>