force-app/main/default/objects/EmailCampaignReceival__c/fields/ClickCount__c.field-meta.xml
<CustomField>
    <fullName>ClickCount__c</fullName>
    <label>Click Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>