force-app/main/default/objects/EmailCampaignReceival__c/fields/EmailCampaign__c.field-meta.xml
<CustomField>
    <fullName>EmailCampaign__c</fullName>
    <label>Email Campaign</label>
    <referenceTo>EmailCampaign__c</referenceTo>
    <relationshipLabel>Email Campaign Snapshots</relationshipLabel>
    <relationshipName>EmailCampaignReceivals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>