force-app/main/default/objects/EmailCampaignReceival__c/fields/UnsubscribedAt__c.field-meta.xml
<CustomField>
    <fullName>UnsubscribedAt__c</fullName>
    <label>Unsubscribed At</label>
    <type>DateTime</type>
</CustomField>